docs(java-se): 优化继承概念的引入表述
- 调整了"继承"概念引入部分的措辞，使其更加突出
- 优化了句子结构，增强了可读性